unpackaged/main/default/objects/litify_fin__lit_Financials_Summary_Setup__c/litify_fin__lit_Financials_Summary_Setup__c.object-meta.xml
<CustomObject>
    <description>Holds the main setup data for Financial Summary.</description>
    <label>Financial Summary Setup</label>
    <nameField>
        <label>Financial Summary Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Summary Setups</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>