unpackaged/main/default/objects/litify_fin__lit_Financials_Summary_Setup__c/fields/litify_fin__lit_Active__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>