unpackaged/main/default/objects/litify_fin__lit_Financials_Summary_Setup__c/fields/litify_fin__lit_Financial_Summary_Setup_Parent__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Financial_Summary_Setup_Parent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to the Financial Summary Setup Parent that facilitates setup versioning.</description>
    <label>Financial Summary Setup Parent</label>
    <referenceTo>litify_fin__lit_Financial_Summary_Setup_Parent__c</referenceTo>
    <relationshipLabel>Financial Summary Setup Parent</relationshipLabel>
    <relationshipName>Financial_Summary_Parent</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>