unpackaged/main/default/objects/litify_fin__lit_Financials_Summary_Setup__c/fields/litify_fin__lit_Master_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Master_Object__c</fullName>
    <description>Holds the API name of the master object this financial summary setup will be related to.</description>
    <label>Master Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>