unpackaged/main/default/objects/litify_fin__lit_Financials_Summary_Setup__c/fields/litify_fin__lit_Transaction_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Transaction_Object__c</fullName>
    <label>Transaction Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>