unpackaged/main/default/objects/litify_fin__lit_Financials_Summary_Setup__c/fields/litify_fin__lit_Type__c.field-meta.xml
<CustomField>
    <fullName>litify_fin__lit_Type__c</fullName>
    <description>Can specify the setup as a standard or ledger setup. Standard setups show up on the main financial summary. Ledger setups are used for the ledger.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Ledger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>