unpackaged/main/default/objects/litify_fin__lit_Financials_Summary_Setup__c/listViews/litify_fin__All.listView-meta.xml
<ListView>
    <fullName>litify_fin__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>litify_fin__lit_Type__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>All</label>
</ListView>